--- a/html/login.html
+++ b/html/login.html
@@ -5,5 +5,9 @@
     <meta viewport="width=device-width, initial-scale=1.0" />
   </head>
 
-  <body></body>
+  <body>
+    <div id="root-container">
+      <h1>EcoAction</h1>
+    </div>
+  </body>
 </html>
