--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta viewport="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/login.css" />
   </head>
 
   <body>
-    <div id="root-container">
-      <h1>EcoAction</h1>
+    <div id="container">
+      <div id="login-container">
+        <h1>EcoAction</h1>
+      </div>
     </div>
   </body>
 </html>
