--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta viewport="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="/css/theme.css" />
     <link rel="stylesheet" href="/css/login.css" />
   </head>
 
