--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <!-- Link to styles of your own -->
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/settings.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/settings.css">
 
 </head>
 
@@ -36,7 +36,7 @@
     <nav id="nav" class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images/logo.jpg" height="36">
+                <img src="assets/images/logo.jpg" height="36">
                 EcoAction
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -157,7 +157,7 @@
                         </div>
                         <div class="row gutters">
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                <div class="text-right">
+                                <div class="text-right pt-3">
                                     <button type="button" id="submit" name="submit" class="btn btn-secondary">Cancel</button>
                                     <button type="button" id="submit" name="submit" class="btn btn-primary">Update</button>
                                 </div>
