--- a/public/html/login.html
+++ b/public/html/login.html
@@ -12,7 +12,9 @@
     <div id="container">
       <div id="login-container">
         <h1>EcoAction</h1>
+        <div id="firebase-ui-auth-container"></div>
       </div>
     </div>
+    <script src="/scripts/login.js"></script>
   </body>
 </html>
