--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta viewport="width=device-width, initial-scale=1.0" />
+    <title>EcoAction | Login</title>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <link rel="stylesheet" href="/css/theme.css" />
     <link rel="stylesheet" href="/css/login.css" />
@@ -11,10 +22,10 @@
   <body>
     <div id="container">
       <div id="login-container">
-        <h1>EcoAction</h1>
+        <h1 id="login-title">EcoAction</h1>
         <div id="firebase-ui-auth-container"></div>
       </div>
     </div>
-    <script src="/scripts/login.js"></script>
+    <script type="module" src="/scripts/login.js"></script>
   </body>
 </html>
