--- a/public/html/login.html
+++ b/public/html/login.html
@@ -24,6 +24,7 @@
       <div id="login-container">
         <h1 id="login-title">EcoAction</h1>
         <div id="firebase-ui-auth-container"></div>
+        <button onclick="window.location.href='index.html'" id="demo"></button>
       </div>
     </div>
     <script type="module" src="/scripts/login.js"></script>
