--- a/public/html/login.html
+++ b/public/html/login.html
@@ -24,7 +24,21 @@
       <div id="login-container">
         <h1 id="login-title">EcoAction</h1>
         <div id="firebase-ui-auth-container"></div>
-        <button onclick="window.location.href='index.html'" id="demo"></button>
+        <div id="align-demo">
+          <div id="demo-wrapper">
+            <a class="animated-arrow" href="/html/index.html">
+              <span class="the-arrow -left">
+                <span class="shaft"></span>
+              </span>
+              <span class="main">
+                <span class="text">Demo</span>
+                <span class="the-arrow -right">
+                  <span class="shaft"></span>
+                </span>
+              </span>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <script type="module" src="/scripts/login.js"></script>
