--- a/public/html/app_shell/footer.html
+++ b/public/html/app_shell/footer.html
@@ -1,6 +1,5 @@
 <footer
-class="text-center text-lg-start text-white"
-style="background-color: #198754">
+class="footer text-center text-lg-start text-white">
 <!-- Grid container -->
 <div class="p-4 pb-0">
 <!-- Section: Links -->
