--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -1,7 +1,7 @@
-<nav id="nav" class="navbar navbar-expand-lg navbar-dark bg-success">
+<nav id="nav" class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="assets/images/logo.jpg" height="36">
+        <a class="navbar-brand" href="/html/index.html">
+            <img src="/assets/images/logo.jpg" height="36">
             EcoAction
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,10 +10,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
+                <a class="nav-link" href="/html/index.html">Home</a>
+                </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">Challenges</a>
+            <a class="nav-link" href="/html/daily_challenges.html">Daily Challenges</a>
             </li>
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -29,9 +29,12 @@
             <li class="nav-item">
             <a class="nav-link" href="#">About Us</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/html/settings.html">Settings</a>
+            </li>
         </ul>
         <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control me-2 bg-white text-dark border-success" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-light" type="submit">Search</button>
         </form>
         </div>
