--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -24,7 +24,7 @@
                                 <h6 class="user-email">yuki@Maxwell.com</h6>
                             </div>
                             <div class="about">
-                                <h5 class="mb-2 text-primary">About</h5>
+                                <h5 class="mb-2 ">About</h5>
                                 <p>I'm Yuki. Full Stack Designer I enjoy creating user-centric, delightful and human experiences.</p>
                             </div>
                         </div>
@@ -36,7 +36,7 @@
                     <div class="card-body">
                         <div class="row gutters">
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                <h6 class="mb-3 text-primary">Personal Details</h6>
+                                <h6 class="mb-2 mt-4">Personal Details</h6>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                                 <div class="form-group">
@@ -65,7 +65,7 @@
                         </div>
                         <div class="row gutters">
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                <h6 class="mb-3 text-primary">Address</h6>
+                                <h6 class="mb-2 mt-4">Address</h6>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                                 <div class="form-group">
@@ -96,7 +96,7 @@
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                 <div class="text-right pt-3">
                                     <button type="button" id="submit" name="submit" class="btn btn-secondary">Cancel</button>
-                                    <button type="button" id="submit" name="submit" class="btn btn-primary">Update</button>
+                                    <button type="button" id="submit" name="submit" class="btn btn-secondary">Update</button>
                                 </div>
                             </div>
                         </div>
