--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -15,7 +15,7 @@
             <li class="nav-item">
             <a class="nav-link" href="/html/daily_challenges.html">Daily Challenges</a>
             </li>
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Resources
             </a>
@@ -25,10 +25,10 @@
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Get Involved</a></li>
             </ul>
-            </li>
-            <li class="nav-item">
+            </li> -->
+            <!-- <li class="nav-item">
             <a class="nav-link" href="#">About Us</a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a class="nav-link" href="/html/settings.html">Settings</a>
             </li>
