--- a/public/html/daily_challenges.html
+++ b/public/html/daily_challenges.html
@@ -1,34 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <div id="head"></div>
-    <link rel="stylesheet" href="/css/settings.css">
+    <link rel="stylesheet" href="/css/daily_challenges.css">
 </head>
 
 <body>
-  <div id="nav_bar"></div>
+  <header>
+    <div id="nav_bar"></div>
+  </header>
 
-  <div class="container">
+  <main>
+    <h1>Daily Challenges</h1>
+
     <div class="card">
-      <div class="card-header" data-bs-toggle="collapse" data-bs-target="#cardBody" style="cursor: pointer;">
-        <h5 class="mb-0">Featured</h5>
+      <div class="card-header" onclick="toggleCollapse(this)">
+          <div class="d-flex">
+            <h5 class="mb-0 pt-1">Challenge 1</h5>
+            <p class="mb-0 ms-3 pt-1">Short description</p>
+            <a href="#" class="btn btn-primary btn-sm ms-auto">Finish</a>
+          </div>    
       </div>
-      <div id="cardBody" class="collapse">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+
+      <div class="card-body">
+        <div class="image-clip">
+          <img src="/assets/images/hike1.jpg" class="card-img-top" alt="Community Cleanup" />
         </div>
+        <p class="card-text">Long <br> Long description</p>
       </div>
     </div>
-  </div>
-  
+
+    <div class="card">
+      <div class="card-header" onclick="toggleCollapse(this)">
+          <div class="d-flex">
+            <h5 class="mb-0 pt-1">Challenge 2</h5>
+            <p class="mb-0 ms-3 pt-1">Short description</p>
+            <a href="#" class="btn btn-primary btn-sm ms-auto">Finish</a>
+          </div>    
+      </div>
+
+      <div class="card-body">
+        <div class="image-clip">
+          <img src="/assets/images/hike1.jpg" class="card-img-top" alt="Community Cleanup" />
+        </div>
+        <p class="card-text">Long <br> Long description</p>
+      </div>
+    </div>
+  </main>
+
+  <footer id="footer">Footer Content</footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="/scripts/app_shell.js"></script>
+  <script src="/scripts/daily_challenges.js"></script>
 </body>
-
-<div id="footer"></div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
-<script src="/scripts/app_shell.js"></script>
-
 </html>
