--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -2,15 +2,17 @@
 <html lang="en">
 
 <head>
-  <div id="head"></div>
-  <link rel="stylesheet" href="/css/settings.css">
-
+    <div id="head"></div>
+    <link rel="stylesheet" href="/css/settings.css">
 </head>
 
 <body>
-  <div id="nav_bar"></div>
 
-    <div class="container">
+    <header>
+        <div id="nav_bar"></div>
+    </header>
+
+    <main class="container">
         <div class="row gutters">
             <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
                 <div class="card h-100">
@@ -24,91 +26,95 @@
                                 <h6 class="user-email">yuki@Maxwell.com</h6>
                             </div>
                             <div class="about">
-                                <h5 class="mb-2 ">About</h5>
-                                <p>I'm Yuki. Full Stack Designer I enjoy creating user-centric, delightful and human experiences.</p>
+                                <h5 class="mb-2">About</h5>
+                                <p>I'm Yuki. Full Stack Designer. I enjoy creating user-centric, delightful, and human experiences.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            
             <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
                 <div class="card h-100">
                     <div class="card-body">
                         <div class="row gutters">
-                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div class="col-12">
                                 <h6 class="mb-2 mt-4">Personal Details</h6>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="fullName">Full Name</label>
                                     <input type="text" class="form-control" id="fullName" placeholder="Enter full name">
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="eMail">Email</label>
                                     <input type="email" class="form-control" id="eMail" placeholder="Enter email ID">
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="phone">Phone</label>
                                     <input type="text" class="form-control" id="phone" placeholder="Enter phone number">
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="website">Website URL</label>
                                     <input type="url" class="form-control" id="website" placeholder="Website url">
                                 </div>
                             </div>
                         </div>
+
                         <div class="row gutters">
-                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div class="col-12">
                                 <h6 class="mb-2 mt-4">Address</h6>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                            <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="Street">Street</label>
-                                    <input type="name" class="form-control" id="Street" placeholder="Enter Street">
+                                    <label for="street">Street</label>
+                                    <input type="text" class="form-control" id="street" placeholder="Enter Street">
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                            <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="ciTy">City</label>
-                                    <input type="name" class="form-control" id="ciTy" placeholder="Enter City">
+                                    <label for="city">City</label>
+                                    <input type="text" class="form-control" id="city" placeholder="Enter City">
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                            <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="sTate">State</label>
-                                    <input type="text" class="form-control" id="sTate" placeholder="Enter State">
+                                    <label for="state">State</label>
+                                    <input type="text" class="form-control" id="state" placeholder="Enter State">
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                            <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="zIp">Zip Code</label>
-                                    <input type="text" class="form-control" id="zIp" placeholder="Zip Code">
+                                    <label for="zip">Zip Code</label>
+                                    <input type="text" class="form-control" id="zip" placeholder="Zip Code">
                                 </div>
                             </div>
                         </div>
+
                         <div class="row gutters">
-                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                <div class="text-right pt-3">
-                                    <button type="button" id="submit" name="submit" class="btn btn-secondary">Cancel</button>
-                                    <button type="button" id="submit" name="submit" class="btn btn-secondary">Update</button>
-                                </div>
+                            <div class="col-12 text-right pt-3">
+                                <button type="button" id="cancel" class="btn btn-secondary">Cancel</button>
+                                <button type="button" id="update" class="btn btn-secondary">Update</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
-      </div>
-  </body>
-       
+    </main>
+
     <div id="footer"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/scripts/app_shell.js"></script>
+
+</body>
 
 </html>
