--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <header>
-    <div id="nav_bar"></div>
+    <!-- <div id="nav_bar"></div> -->
   </header>
 
   <main class="container">
