--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -1,6 +1,6 @@
 <nav id="nav" class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/html/index.html">
+        <a class="navbar-brand" href="/">
             <img src="/assets/images/logo.jpg" height="36">
             EcoAction
         </a>
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link" href="/html/index.html">Home</a>
+                <a class="nav-link" href="/html/home.html">Home</a>
                 </li>
             <li class="nav-item">
             <a class="nav-link" href="/html/daily_challenges.html">Daily Challenges</a>
