--- a/public/html/index.html
+++ b/public/html/index.html
@@ -19,7 +19,7 @@
           Join us in making a difference for our planet. Start your eco-friendly journey today!
         </p>
         <button
-          onclick="window.location.href='login.html'"
+          onclick="window.location.href='/login'"
           class="btn btn-dark bg-success btn-lg"
           type="button">
           Login/Signup
