--- a/public/html/daily_challenges.html
+++ b/public/html/daily_challenges.html
@@ -17,9 +17,10 @@
       <div class="card-header" onclick="toggleCollapse(this)">
           <div class="d-flex">
             <h5 class="mb-0 pt-1">Challenge 1</h5>
-            <p class="mb-0 ms-3 pt-1">Short description</p>
             <a href="#" class="btn btn-primary btn-sm ms-auto">Finish</a>
           </div>    
+          <p class="mb-0 pt-1">Short description</p>
+
       </div>
 
       <div class="card-body">
@@ -34,9 +35,9 @@
       <div class="card-header" onclick="toggleCollapse(this)">
           <div class="d-flex">
             <h5 class="mb-0 pt-1">Challenge 2</h5>
-            <p class="mb-0 ms-3 pt-1">Short description</p>
             <a href="#" class="btn btn-primary btn-sm ms-auto">Finish</a>
           </div>    
+          <p class="mb-0 pt-1">Short description</p>
       </div>
 
       <div class="card-body">
