--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,88 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <div id="head"></div>
-    <link rel="stylesheet" href="/css/index.css">
-</head>
+  <head>
+      <div id="head"></div>
+      <link rel="stylesheet" href="/css/index.css">
+  </head>
 
-<body>
-  <header>
-    <!-- <div id="nav_bar"></div> -->
-  </header>
+  <body>
+    <header>
+      <!-- <div id="nav_bar"></div> -->
+    </header>
 
-  <main class="container">
-    <div class="p-5 mb-4 rounded-3">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Welcome to EcoAction</h1>
-        <p class="col-md-8 fs-4">
-          Join us in making a difference for our planet. Start your eco-friendly journey today!
-        </p>
-        <button
-          onclick="window.location.href='/login'"
-          class="btn btn-dark bg-success btn-lg"
-          type="button">
-          Login/Signup
-        </button>
-      </div>
-    </div>
+    
 
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="/assets/images/hike1.jpg" class="card-img-top" alt="Community Cleanup" />
-          <div class="card-body">
-            <h5 class="card-title">Community Cleanup</h5>
-            <p class="card-text">
-              Join local cleanup events to help keep our neighborhoods and natural spaces clean
-              and green.
-            </p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
+
+    <main class="container">
+      <div class="p-5 mb-4 rounded-3">
+        <div class="container-fluid py-5">
+          <h1 class="display-5 fw-bold">Welcome to EcoAction</h1>
+          <p class="col-md-8 fs-4">
+            Join us in making a difference for our planet. Start your eco-friendly journey today!
+          </p>
+          <button
+            onclick="window.location.href='/login'"
+            class="btn btn-dark bg-success btn-lg"
+            type="button">
+            Login/Signup
+          </button>
         </div>
       </div>
 
-      <div class="col">
-        <div class="card h-100">
-          <img src="/assets/images/hike2.jpg" class="card-img-top" alt="Tree Planting" />
-          <div class="card-body">
-            <h5 class="card-title">Tree Planting</h5>
-            <p class="card-text">
-              Participate in tree-planting initiatives to restore forests and combat climate
-              change.
-            </p>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="/assets/images/hike1.jpg" class="card-img-top" alt="Community Cleanup" />
+            <div class="card-body">
+              <h5 class="card-title">Community Cleanup</h5>
+              <p class="card-text">
+                Join local cleanup events to help keep our neighborhoods and natural spaces clean
+                and green.
+              </p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
           </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+
+        <div class="col">
+          <div class="card h-100">
+            <img src="/assets/images/hike2.jpg" class="card-img-top" alt="Tree Planting" />
+            <div class="card-body">
+              <h5 class="card-title">Tree Planting</h5>
+              <p class="card-text">
+                Participate in tree-planting initiatives to restore forests and combat climate
+                change.
+              </p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100">
+            <img src="/assets/images/hike3.jpg" class="card-img-top" alt="Recycling Drive" />
+            <div class="card-body">
+              <h5 class="card-title">Recycling Drive</h5>
+              <p class="card-text">
+                Learn how to recycle effectively and join drives to reduce waste in your community.
+              </p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
           </div>
         </div>
       </div>
+    </main>
 
-      <div class="col">
-        <div class="card h-100">
-          <img src="/assets/images/hike3.jpg" class="card-img-top" alt="Recycling Drive" />
-          <div class="card-body">
-            <h5 class="card-title">Recycling Drive</h5>
-            <p class="card-text">
-              Learn how to recycle effectively and join drives to reduce waste in your community.
-            </p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
-        </div>
+    <!-- <nav class="navbar fixed-bottom justify-content-center">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Sticky bottom</a>
       </div>
-    </div>
-  </main>
+    </nav> -->
 
-  <footer id="footer">
-    Footer Content
-  </footer>
+    <ul class="nav navbar justify-content-center fixed-bottom">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+    </ul>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
-  <script src="/scripts/app_shell.js"></script>
+    <footer id="footer">
+      Footer Content
+    </footer>
+    
+    <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="/scripts/app_shell.js"></script>
 
-</body>
+  </body>
 </html>
