--- a/public/html/login.html
+++ b/public/html/login.html
@@ -7,12 +7,13 @@
 
   <body>
     <div id="container">
-      <div id="login-container">
-        <h1 id="login-title">EcoAction</h1>
+      <img id="logo" src="/assets/logo.png" alt="EcoAction" />
+      <div id="form-container">
+        <h1 id="form-title">Login / Signup</h1>
         <div id="firebase-ui-auth-container"></div>
         <div id="align-demo">
           <div id="demo-wrapper">
-            <a class="animated-arrow" href="/html/index.html">
+            <a class="animated-arrow" href="/html/daily_challenges.html">
               <span class="the-arrow -left">
                 <span class="shaft"></span>
               </span>
@@ -40,5 +41,4 @@
     href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
   <script src="/scripts/app_shell.js"></script>
-
 </html>
