--- a/public/html/login.html
+++ b/public/html/login.html
@@ -7,7 +7,9 @@
 
   <body>
     <div id="container">
-      <img id="logo" src="/assets/logo.png" alt="EcoAction" />
+      <div id="logo-wrapper">
+        <img id="logo" src="/assets/logo.png" alt="EcoAction" />
+      </div>
       <div id="form-container">
         <h1 id="form-title">Login / Signup</h1>
         <div id="firebase-ui-auth-container"></div>
@@ -27,6 +29,7 @@
           </div>
         </div>
       </div>
+      <footer><div id="footer-wrapper">&copy; 2025 EcoAction. All Rights Reserved.</div></footer>
     </div>
   </body>
 
