--- a/public/html/index.html
+++ b/public/html/index.html
@@ -80,24 +80,22 @@
       </div>
     </main>
 
-    <!-- <nav class="navbar fixed-bottom justify-content-center">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Sticky bottom</a>
-      </div>
-    </nav> -->
 
-    <ul class="nav navbar justify-content-center fixed-bottom">
+    <ul class="nav navbar justify-content-center fixed-bottom nav-fill">
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="btn btn-primary" href="#"><i class="fa-solid fa-circle-check"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="btn btn-primary" href="#"><i class="fa-solid fa-user-group"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="btn btn-primary" href="#"><i class="fa-solid fa-house"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="btn btn-primary" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="btn btn-primary" href="#"><i class="fa-solid fa-circle-user"></i></a>
       </li>
     </ul>
 
@@ -108,6 +106,8 @@
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="/scripts/app_shell.js"></script>
+    <!-- Find icons at https://fontawesome.com/icons, we're using solid style -->
+    <script src="https://kit.fontawesome.com/0eda3376bd.js" crossorigin="anonymous"></script>
 
   </body>
 </html>
