--- a/public/html/home.html
+++ b/public/html/home.html
@@ -16,7 +16,8 @@
       Logged In!!!
     </main>
 
-    <div id="footer"></div>
+    <nav id="footer-nav"></nav>
+    <footer id="footer"></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/scripts/app_shell.js"></script>
