--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,6 +4,7 @@
   <head>
       <div id="head"></div>
       <link rel="stylesheet" href="/css/index.css">
+      <link rel="stylesheet" href="/css/app_shell/nav_bar.css">
   </head>
 
   <body>
@@ -81,27 +82,8 @@
     </main>
 
 
-    <ul class="nav navbar justify-content-center fixed-bottom nav-fill">
-      <li class="nav-item">
-        <a class="btn btn-primary" href="#"><i class="fa-solid fa-circle-check"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="btn btn-primary" href="#"><i class="fa-solid fa-user-group"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="btn btn-primary" href="#"><i class="fa-solid fa-house"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="btn btn-primary" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="btn btn-primary" href="#"><i class="fa-solid fa-circle-user"></i></a>
-      </li>
-    </ul>
-
-    <footer id="footer">
-      Footer Content
-    </footer>
+    <nav id="footer-nav"></nav>
+    <footer id="footer"></footer>
     
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
