--- a/public/html/login.html
+++ b/public/html/login.html
@@ -33,6 +33,9 @@
     </div>
   </body>
 
+  <nav id="footer-nav"></nav>
+  <footer id="footer"></footer>
+
   <script type="module" src="/scripts/login.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
