--- a/public/html/app_shell/footer-nav.html
+++ b/public/html/app_shell/footer-nav.html
@@ -1,4 +1,4 @@
-<ul class="nav navbar justify-content-center fixed-bottom nav-fill">
+<ul class="nav footer-navbar justify-content-center fixed-bottom nav-fill">
     <li class="nav-item">
       <a class="btn btn-primary" href="/html/daily_challenges.html"><i class="fa-solid fa-circle-check"></i></a>
     </li>
