--- a/public/html/app_shell/head.html
+++ b/public/html/app_shell/head.html
@@ -7,6 +7,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <link rel="stylesheet" href="/css/theme.css" />
-<link rel="stylesheet" href="/css/app_shell/nav_bar.css" />
+<link rel="stylesheet" href="/css/app_shell/navbar.css" />
+<link rel="stylesheet" href="/css/app_shell/footer_navbar.css" />
 <link rel="stylesheet" href="/css/app_shell/footer.css" />
 
