--- a/public/html/app_shell/head.html
+++ b/public/html/app_shell/head.html
@@ -10,4 +10,4 @@
 <link rel="stylesheet" href="/css/app_shell/navbar.css" />
 <link rel="stylesheet" href="/css/app_shell/footer_navbar.css" />
 <link rel="stylesheet" href="/css/app_shell/footer.css" />
-
+<link rel="stylesheet" href="/css/app_shell/app_shell.css" />
