--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -15,6 +15,9 @@
             <li class="nav-item">
             <a class="nav-link" href="/html/daily_challenges.html">Daily Challenges</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/html/profile.html">Profile</a>
+            </li>
             <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Resources
