profile icon menu

--- a/public/html/daily_challenges.html
+++ b/public/html/daily_challenges.html
@@ -19,7 +19,7 @@
             <h5 class="mb-0 title">Challenge 1</h5>
             <p class="mb-0 description">Short description</p>
             <div class="finish_button">
-              <a href="#" class="btn btn-primary btn-sm ms-auto">Finish</a>
+              <a href="#" class="btn gbtn btn-primary btn-sm ms-auto">Finish</a>
             </div>
 
       </div>
