--- a/public/html/home.html
+++ b/public/html/home.html
@@ -12,9 +12,9 @@
         <div id="nav_bar"></div>
     </header>
 
-    <main class="container">
-      Logged In!!!
-    </main>
+    <div class="d-flex align-items-center" style="height: 100%; width: 100%; text-align: center;">
+        <h1 class="container">Logged In</h1>
+    </div>
 
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
