--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -95,7 +95,7 @@
 
                         <div class="row gutters">
                             <div class="col-12 text-right pt-3">
-                                <a id="edit" class="btn btn-secondary" href="/html/settings.html">Edit</a>
+                                <a id="edit" class="btn gbtn btn-secondary" href="/html/settings.html">Edit</a>
                             </div>
                         </div>
                     </div>
