--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -99,8 +99,8 @@
 
                         <div class="row gutters">
                             <div class="col-12 text-right pt-3">
-                                <button type="button" id="cancel" class="btn btn-secondary">Cancel</button>
-                                <button type="button" id="update" class="btn btn-secondary">Update</button>
+                                <a id="cancel" class="btn gbtn btn-secondary" href="/html/profile.html">Cancel</a>
+                                <button type="button" id="update" class="btn gbtn btn-secondary">Update</button>
                             </div>
                         </div>
                     </div>
