--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -1,6 +1,6 @@
 <nav id="nav" class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="/html/home.html">
             <img id="logo" src="/assets/images/logo.svg" height="36">
             EcoAction
         </a>
@@ -8,15 +8,15 @@
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" href="/html/home.html">Home</a>
-                </li>
+        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
             <a class="nav-link" href="/html/daily_challenges.html">Daily Challenges</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/html/profile.html">Profile</a>
+                <a class="nav-link" href="/html/home.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/html/groups.html">Groups</a>
             </li>
             <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -32,14 +32,29 @@
             <!-- <li class="nav-item">
             <a class="nav-link" href="#">About Us</a>
             </li> -->
-            <li class="nav-item">
-                <a class="nav-link" href="/html/settings.html">Settings</a>
-            </li>
         </ul>
-        <form class="d-flex" role="search">
-            <input class="form-control me-2 bg-white text-dark border-success" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Search</button>
-        </form>
+
+
+
+            <form class="d-flex" role="search">
+                <input class="form-control me-2 bg-white text-dark border-success" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-light" type="submit">Search</button>
+            </form>
+
+            <!-- Profile -->
+            <div id="profile" class="dropdown ms-3">
+                <button class="btn btn-outline-light p-0 border-0" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="/assets/images/profile-icon.png" alt="Profile" class="rounded-circle" width="40" height="40">
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" href="/html/profile.html">Settings</a></li>
+                    <li><a class="dropdown-item" href="/html/daily_challenges.html">Demo</a></li>
+                    <li><a class="dropdown-item" href="/html/help.html">Help</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="/html/login.html">Sign Out</a></li>
+              </ul>
+            </div>
+
         </div>
     </div>
 </nav>
