--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -4,16 +4,19 @@
     <div id="head"></div>
 </head>
 <body>
-    <header>
-        <div id="nav_bar"></div>
-    </header>
+    <header id="nav_bar"></header>
+    
+    <!-- BODY -->
 
     <div class="d-flex align-items-center" style="height: 100%; width: 100%; text-align: center;">
-        <h1 class="container">404 - Page Not Found</h1>
+        <h1 class="container">Groups</h1>
     </div>
 
+
+    <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="/scripts/app_shell.js"></script>
 </body>
