Settings update and log in fix

--- a/public/html/app_shell/head.html
+++ b/public/html/app_shell/head.html
@@ -11,3 +11,7 @@
 <link rel="stylesheet" href="/css/app_shell/footer_navbar.css" />
 <link rel="stylesheet" href="/css/app_shell/footer.css" />
 <link rel="stylesheet" href="/css/app_shell/app_shell.css" />
+
+<script src="/scripts/auth.js"></script>
+
+
