--- a/public/html/login.html
+++ b/public/html/login.html
@@ -53,4 +53,6 @@
   <footer id="footer"></footer>
 
   <script type="module" src="/scripts/login.js"></script>
+  <script type="module" src="/scripts/auth.js"></script>
+
 </html>
