--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -31,11 +31,11 @@
                                 <div class="user-avatar">
                                     <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Maxwell Admin">
                                 </div>
-                                <h5 class="user-name">Yuki Hayashi</h5>
-                                <h6 class="user-email">yuki@Maxwell.com</h6>
+                                <h5 id="publicName" class="user-name">Yuki Hayashi</h5>
+                                <h6 id="publicEmail" class="user-email">yuki@Maxwell.com</h6>
                             </div>
                             <div class="about">
-                                <h5 class="mb-2">About</h5>
+                                <h5 id="publicAbout" class="mb-2">About</h5>
                                 <p>I'm Yuki. Full Stack Designer. I enjoy creating user-centric, delightful, and human experiences.</p>
                             </div>
                         </div>
@@ -88,21 +88,20 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="state">State</label>
-                                    <input type="text" class="form-control" id="state" placeholder="Enter State">
+                                    <label for="state">Province</label>
+                                    <input type="text" class="form-control" id="province" placeholder="Enter State">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="zip">Zip Code</label>
-                                    <input type="text" class="form-control" id="zip" placeholder="Zip Code">
+                                    <label for="zip">Postal Code</label>
+                                    <input type="text" class="form-control" id="postalCode" placeholder="Zip Code">
                                 </div>
                             </div>
                         </div>
 
                         <div class="row gutters">
-                            <div class="col-12 text-right pt-3">
-                                <a id="cancel" class="btn gbtn btn-secondary" href="/html/profile.html">Cancel</a>
+                            <div class="col-12 bottom-menu text-right pt-3">
                                 <button type="button" id="update"  class="btn gbtn btn-secondary">Update</button>
                             </div>
                         </div>
