--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -31,8 +31,8 @@
                                 <div class="user-avatar">
                                     <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Maxwell Admin">
                                 </div>
-                                <h5 id="publicName" class="user-name">Yuki Hayashi</h5>
-                                <h6 id="publicEmail" class="user-email">yuki@Maxwell.com</h6>
+                                <h5 id="publicName" class="user-name">Name</h5>
+                                <h6 id="publicEmail" class="user-email">Email</h6>
                             </div>
                             <div class="about">
                                 <h5 id="publicAbout" class="mb-2">About</h5>
