--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -102,6 +102,7 @@
 
                         <div class="row gutters">
                             <div class="col-12 bottom-menu text-right pt-3">
+                                <a href="/html/settings_disabled.html" class="btn gbtn btn-secondary">Cancel</a>
                                 <button type="button" id="update"  class="btn gbtn btn-secondary">Update</button>
                             </div>
                         </div>
