--- a/public/html/settings_disabled.html
+++ b/public/html/settings_disabled.html
@@ -94,7 +94,7 @@
                         </div>
 
                         <div class="row gutters">
-                            <div class="col-12 text-right pt-3">
+                            <div class="col-12 bottom-menu text-right pt-3">
                                 <a id="edit" class="btn gbtn btn-secondary" href="/html/settings.html">Edit</a>
                             </div>
                         </div>
