fix footer and navbar links; update daily challenges URL and adjust image height in CSS

--- a/public/html/app_shell/footer-nav.html
+++ b/public/html/app_shell/footer-nav.html
@@ -1,6 +1,6 @@
 <ul class="nav footer-navbar justify-content-center fixed-bottom nav-fill">
     <li class="nav-item">
-      <a class="btn btn-primary" href="/html/daily_challenges.html"><i class="fa-solid fa-circle-check"></i></a>
+      <a class="btn btn-primary" href="/html/dailyChallenges.html"><i class="fa-solid fa-circle-check"></i></a>
     </li>
     <li class="nav-item">
       <a class="btn btn-primary" href="/html/groups.html"><i class="fa-solid fa-user-group"></i></a>
