--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -50,7 +50,7 @@
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                         <li><a class="dropdown-item" href="/html/profile.html">Profile</a></li>
                         <li><a class="dropdown-item" href="/html/settings_disabled.html">Settings</a></li>
-                        <li><a class="dropdown-item" href="/html/daily_challenges.html">Demo</a></li>
+                        <li><a class="dropdown-item" href="/html/dailyChallenges.html">Demo</a></li>
                         <li><a class="dropdown-item" href="/html/help.html">Help</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/html/login.html">Sign Out</a></li>
