refactor HTML and CSS files; update script tags to use module type and clean up unused code

--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -9,7 +9,7 @@
         <div class="d-lg-none ms-auto" id="profile-small">
             <div id="profile" class="dropdown ms-3">
                 <button class="btn btn-outline-light p-0 border-0" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="/assets/images/profile-icon.png" alt="Profile" class="rounded-circle" width="40" height="40">
+                    <img src="/assets/images/profile-icon.png" id="navBarProfileImage" alt="Profile" class="rounded-circle" width="40" height="40">
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                     <li><a class="dropdown-item" href="/html/profile.html">Profile</a></li>
@@ -45,7 +45,7 @@
             <div id="profile" class="d-none d-lg-block ms-3">
                 <div class="dropdown">
                     <button class="btn btn-outline-light p-0 border-0" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="/assets/images/profile-icon.png" alt="Profile" class="rounded-circle" width="40" height="40">
+                        <img src="/assets/images/profile-icon.png" alt="Profile" class="rounded-circle navBarProfileImage" width="40" height="40">
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                         <li><a class="dropdown-item" href="/html/profile.html">Profile</a></li>
