--- a/public/html/404.html
+++ b/public/html/404.html
@@ -15,5 +15,5 @@
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/app_shell.js"></script>
 </body>
