--- a/public/html/app_shell/head.html
+++ b/public/html/app_shell/head.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+      
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <link rel="stylesheet" href="/css/theme.css" />
 <link rel="stylesheet" href="/css/app_shell/navbar.css" />
@@ -12,6 +13,8 @@
 <link rel="stylesheet" href="/css/app_shell/footer.css" />
 <link rel="stylesheet" href="/css/app_shell/app_shell.css" />
 
-<script src="/scripts/auth.js"></script>
+
+<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+
 
 
