--- a/public/html/dailyChallenges.html
+++ b/public/html/dailyChallenges.html
@@ -8,15 +8,6 @@
   <body>
     <header>
       <div id="nav_bar"></div>
-
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
-      <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-      <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-  
     </header>
 
     <main>
@@ -70,7 +61,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       defer></script>
-    <script src="/scripts/app_shell.js"></script>
-    <script type="module" src="/scripts/dailyChallenges.js"></script>
+      <script type="module" src="/scripts/app_shell.js"></script>
+      <script type="module" src="/scripts/dailyChallenges.js"></script>
   </body>
 </html>
