--- a/public/html/finish_challenge.html
+++ b/public/html/finish_challenge.html
@@ -54,7 +54,7 @@
     <footer id="footer"></footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/app_shell.js"></script>
     <script type="module" src="/scripts/finish_challenge.js"></script>
 
 </body>    
