--- a/public/html/group_creation.html
+++ b/public/html/group_creation.html
@@ -44,6 +44,6 @@
     <footer id="footer"></footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/app_shell.js"></script>
     <script type="module" src="/scripts/group_creation.js"></script>
 </body>
