--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -49,7 +49,7 @@
     <footer id="footer"></footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/app_shell.js"></script>
 
     <script type="module" src="/scripts/groups.js"></script>
 </body>
