--- a/public/html/home.html
+++ b/public/html/home.html
@@ -3,6 +3,7 @@
 
 <head>
     <div id="head"></div>
+
 </head>
 
 <body>
@@ -19,8 +20,11 @@
     <footer id="footer"></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/app_shell.js"></script>
 
 </body>
+
+
+
 
 </html>
