--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,6 +5,15 @@
       <div id="head"></div>
       <link rel="stylesheet" href="/css/index.css">
       <link rel="stylesheet" href="/css/app_shell/nav_bar.css">
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+
   </head>
 
   <body>
@@ -87,7 +96,7 @@
     
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/app_shell.js"></script>
     <!-- Find icons at https://fontawesome.com/icons, we're using solid style -->
     <script src="https://kit.fontawesome.com/0eda3376bd.js" crossorigin="anonymous"></script>
 
