--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -5,13 +5,7 @@
     <div id="head"></div>
     <link rel="stylesheet" href="/css/profile.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+    <script type="module" src="/scripts/app_shell.js"></script>
 
 </head>
 
@@ -33,8 +27,13 @@
                         <div class="account-settings">
                             <div class="user-profile">
                                 <div class="user-avatar">
-                                    <img id="profileImage" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Maxwell Admin">
-                                </div>
+                                    <!-- Profile Image -->
+                                    <img id="profileImage" src="/assets/images/profile-icon.png" alt="Profile Image">
+                                    
+                                    <!-- Upload Button -->
+                                    <label for="imageUpload" id="imageUploadButton" class="btn m-auto mt-3 gbtn btn-secondary">Upload Image</label>
+                                    <input type="file" id="imageUpload" accept="image/*" style="display: none;">
+                                  </div>
                                     <div class="form-group">
                                         <input type="text" disabled class="form-control publicInfoField" id="displayName" placeholder="Enter full name">
                                     </div>
@@ -177,8 +176,8 @@
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/scripts/app_shell.js"></script>
     <script type="module" src="/scripts/profile.js"></script>
 
 </body>
