add favicon and update head structure in app_shell and home pages

--- a/public/html/app_shell/head.html
+++ b/public/html/app_shell/head.html
@@ -1,3 +1,5 @@
+<link rel="icon" type="image/x-icon" href="/assets/images/ecoaction.ico">
+
 <title>EcoAction</title>
 <meta name="comp1800 template" content="EcoAction App">
 
@@ -14,7 +16,6 @@
 <link rel="stylesheet" href="/css/app_shell/app_shell.css" />
 
 
-<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
 
 
 
