--- a/public/html/group_creation.html
+++ b/public/html/group_creation.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="right mt-3">
-                        <a id="createGroupButton" class="btn gbtn btn-secondary">Edit</a>
+                        <a id="createGroupButton" class="btn gbtn btn-secondary">Create Group</a>
                     </div>
                 </div>
                
