--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -44,6 +44,8 @@
         </div>
     </div>
 
+    <a class="btn btn-primary card-href" href="group_creation.html">Create New</a>
+
     <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
