--- a/public/html/group.html
+++ b/public/html/group.html
@@ -14,6 +14,12 @@
     <header id="nav_bar"></header>
     
     <!-- BODY -->
+    <div class="container">
+        <h1><span id="groupName">this hike</span></h1>
+        <br>
+        <h2><b>USERS</b></h2>
+        <span id="groupUsers" style="white-space: pre-line"></span>
+    </div>
 
     <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
@@ -21,4 +27,5 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
     <script type="module" src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/group.js"></script>
 </body>
