error handling and fix loading head elements in body

--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -2,158 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Bar Chart - Multiple</title>
-    <style>
-      /* Basic styling for our "Card" layout */
-      .card {
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        padding: 16px;
-        margin: 16px;
-        max-width: 600px;
-        font-family: sans-serif;
-      }
-      .card-header {
-        margin-bottom: 16px;
-      }
-      .card-title {
-        font-size: 1.5em;
-        margin: 0;
-      }
-      .card-description {
-        color: #666;
-        margin: 0;
-      }
-      .card-content {
-        margin-bottom: 16px;
-      }
-      .card-footer {
-        font-size: 0.9em;
-        color: #999;
-      }
-      .card-footer p {
-        margin: 4px 0;
-      }
-    </style>
+    <meta viewport="width=device-width, initial-scale=1.0" />
+    <title>My Stats</title>
   </head>
-  <body>
-    <div id="app"></div>
-
-    <!-- Chart.js from CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script>
-      (function () {
-        // Data and configuration
-        const chartData = [
-          { month: "January", desktop: 186, mobile: 80 },
-          { month: "February", desktop: 305, mobile: 200 },
-          { month: "March", desktop: 237, mobile: 120 },
-          { month: "April", desktop: 73, mobile: 190 },
-          { month: "May", desktop: 209, mobile: 130 },
-          { month: "June", desktop: 214, mobile: 140 },
-        ];
-
-        const chartConfig = {
-          desktop: {
-            label: "Desktop",
-            color: "hsl(200, 70%, 50%)", // example color; adjust as needed
-          },
-          mobile: {
-            label: "Mobile",
-            color: "hsl(340, 70%, 50%)", // example color; adjust as needed
-          },
-        };
-
-        // Create Card Elements
-        const app = document.getElementById("app");
-        const card = document.createElement("div");
-        card.className = "card";
-
-        // Card Header
-        const cardHeader = document.createElement("div");
-        cardHeader.className = "card-header";
-        const cardTitle = document.createElement("h2");
-        cardTitle.className = "card-title";
-        cardTitle.textContent = "Bar Chart - Multiple";
-        const cardDescription = document.createElement("p");
-        cardDescription.className = "card-description";
-        cardDescription.textContent = "January - June 2024";
-        cardHeader.appendChild(cardTitle);
-        cardHeader.appendChild(cardDescription);
-
-        // Card Content with Canvas for Chart.js
-        const cardContent = document.createElement("div");
-        cardContent.className = "card-content";
-        const canvas = document.createElement("canvas");
-        canvas.id = "myChart";
-        cardContent.appendChild(canvas);
-
-        // Card Footer
-        const cardFooter = document.createElement("div");
-        cardFooter.className = "card-footer";
-        const footerText = document.createElement("p");
-        footerText.textContent = "Trending up by 5.2% this month ↑";
-        const footerSubText = document.createElement("p");
-        footerSubText.textContent = "Showing total visitors for the last 6 months";
-        cardFooter.appendChild(footerText);
-        cardFooter.appendChild(footerSubText);
-
-        // Assemble Card
-        card.appendChild(cardHeader);
-        card.appendChild(cardContent);
-        card.appendChild(cardFooter);
-        app.appendChild(card);
-
-        // Prepare data for Chart.js
-        const labels = chartData.map((item) => item.month.slice(0, 3));
-        const desktopData = chartData.map((item) => item.desktop);
-        const mobileData = chartData.map((item) => item.mobile);
-
-        // Initialize Chart.js
-        const ctx = document.getElementById("myChart").getContext("2d");
-        new Chart(ctx, {
-          type: "bar",
-          data: {
-            labels: labels,
-            datasets: [
-              {
-                label: chartConfig.desktop.label,
-                data: desktopData,
-                backgroundColor: chartConfig.desktop.color,
-                borderRadius: 4,
-              },
-              {
-                label: chartConfig.mobile.label,
-                data: mobileData,
-                backgroundColor: chartConfig.mobile.color,
-                borderRadius: 4,
-              },
-            ],
-          },
-          options: {
-            responsive: true,
-            scales: {
-              x: {
-                grid: { display: false },
-                ticks: { padding: 10 },
-              },
-              y: {
-                beginAtZero: true,
-                grid: { drawBorder: false },
-              },
-            },
-            plugins: {
-              tooltip: {
-                callbacks: {
-                  label: function (context) {
-                    return context.dataset.label + ": " + context.parsed.y;
-                  },
-                },
-              },
-            },
-          },
-        });
-      })();
-    </script>
-  </body>
+  <body></body>
 </html>
